KAFKA-1566: Kafka environment configuration (kafka-env.sh)